k8s/sac.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: {SAC_MSTR_NAME}
  labels:
    run: {SAC_MSTR_NAME}
spec:
  #clusterIP: None
  type: NodePort
  ports:
  - port: 80
    targetPort: 7990
    protocol: TCP
    name: http
  selector:
    run: {SAC_MSTR_NAME}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {SAC_MSTR_NAME}
spec:
  selector:
    matchLabels:
      run: {SAC_MSTR_NAME}
  replicas: 1
  template:
    metadata:
      labels:
        run: {SAC_MSTR_NAME}
    spec:
      containers:
      - name: {SAC_MSTR_NAME}-cntr
        image: ghcr.io/ec-release/sac:master-eks
        ports:
        - containerPort: 7990
---
apiVersion: v1
kind: Service
metadata:
  name: {SAC_SLAV_NAME}
  labels:
    run: {SAC_SLAV_NAME}
spec:
  #clusterIP: None
  type: NodePort
  ports:
  - port: 80
    targetPort: 7990
    protocol: TCP
    name: http
  selector:
    run: {SAC_SLAV_NAME}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {SAC_SLAV_NAME}
spec:
  selector:
    matchLabels:
      run: {SAC_SLAV_NAME}
  replicas: 1
  template:
    metadata:
      labels:
        run: {SAC_SLAV_NAME}
    spec:
      containers:
      - name: {SAC_SLAV_NAME}-cntr
        image: ghcr.io/ec-release/sac:slave-eks
        ports:
        - containerPort: 7990
