k8s/svc1.1.yml
#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: {SVC_APP_NAME}-pv
#  labels:
#    type: local
#spec:
#  storageClassName: manual
#  capacity:
#    storage: 1Gi
#  accessModes:
#    - ReadWriteOnce
#  hostPath:
#    path: "/mnt/data"
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: {SVC_APP_NAME}-pvc
#spec:
#  storageClassName: manual
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: {SVC_APP_NAME}
  labels:
    run: {SVC_APP_NAME}
spec:
  #clusterIP: None
  type: NodePort
  ports:
  - port: 80
    targetPort: 7990
    protocol: TCP
    name: http
  selector:
    run: {SVC_APP_NAME}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {SVC_APP_NAME}
spec:
  selector:
    matchLabels:
      run: {SVC_APP_NAME}
  replicas: 1
  template:
    metadata:
      labels:
        run: {SVC_APP_NAME}
    spec:
      #volumes:
      #- name: {SVC_APP_NAME}-vlm
      #  persistentVolumeClaim:
      #  claimName: {SVC_APP_NAME}-pvc       
      containers:
      - name: {SVC_APP_NAME}-cntr
        image: ghcr.io/ec-release/svc:1.1
        ports:
        - containerPort: 7990
        volumeMounts:
        #- mountPath: "/root/svcs"
        #  name: {SVC_APP_NAME}-vlm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {SVC_APP_NAME}-igs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: {SVC_APP_NAME}-cls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: {K8_SECRT_NAME}
            port:
              number: 80
